# stbridge

./: .gitignore  .gitmodules  50-stlinkv3.rules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  stbridge.cpp  stbridge.h
.github/workflows/: build_wheels.yml  main.yml
examples/: 50-stlinkv3.rules  all.py
src/: bindings.cpp  stbridge.cpp  stbridge.h
tests/: all.py  lsm6dsm.py
